[gd_scene load_steps=3 format=3 uid="uid://201jmce6dn1q"]

[ext_resource type="Script" uid="uid://cbyqktynucmbw" path="res://Scripts/UI/stats_list.gd" id="1_n724n"]

[sub_resource type="LabelSettings" id="LabelSettings_0ik7g"]
line_spacing = 1.0

[node name="StatsList" type="VBoxContainer"]
custom_minimum_size = Vector2(1, 1)
offset_right = 27.0
offset_bottom = 364.0
size_flags_horizontal = 0
theme_override_constants/separation = 0
script = ExtResource("1_n724n")

[node name="Title" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "Total"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1
clip_text = true

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(30, 2)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1

[node name="Line2D" type="Line2D" parent="Control"]
position = Vector2(12, 3.0000005)
points = PackedVector2Array(-12, -2, 60, -2)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="damage" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="range" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="weight" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="attackspeed" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="velocity" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="count" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="piercing" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="duration" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="buildup" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="size" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="hp" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="stance" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="movespeed" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="xp" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="mogul" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="luck" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="critchance" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="critdamage" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="ghostly" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="regen" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="magnetize" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="lifesteal" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="bonusvselites" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="shield" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="difficulty" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="revies" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="thorns" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[node name="inaccuracy" type="Label" parent="."]
custom_minimum_size = Vector2(30, 15)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "11"
label_settings = SubResource("LabelSettings_0ik7g")
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Title" to="Title" method="_mouse_entered"]
[connection signal="mouse_exited" from="Title" to="Title" method="_mouse_exited"]
